# lib-snippets

./: CHANGELOG.md  Cargo.toml  README.md
benches/: hashes.rs
src/: content.rs  debugging.rs  ext.rs  language.rs  lib.rs  parser.rs  text.rs  tree_sitter_consts.rs
src/ext/: iter.rs  vec.rs
src/language/: c99_tc3.rs  cpp_98.rs  java_11.rs  normalize_code.rs  normalize_comments.rs  snippet_context.rs
src/parser/: bytes.rs  function.rs  iter.rs  java.rs  normalize.rs  stack.rs
src/text/: buffer.rs  normalize_lines.rs  normalize_space.rs
tests/it/: language.rs  main.rs  tracing.rs
tests/it/language/: c99_tc3.rs  cpp_98.rs  java_11.rs
tests/it/language/testdata/c99_tc3/: hello_world_comment.c  hello_world_error.c  signature_comment.c
tests/it/language/testdata/cpp_98/: bare_function_in_namespace.cc  simple_class.cc
tests/it/language/testdata/java_11/: smoke_test.java  with_package.java
tests/it/parser/: stack.rs
