[package]
name = "snippets"
version = "0.2.0"
edition = "2021"
description = "Extracts snippets of programming languages from files"
publish = false

[features]
default = []

# Enables hardware acceleration for SHA2
sha2-asm = ["sha2/asm"]

# Enables support for each named language.
# For more info, see the module documentation for the language.
lang-all = ["lang-c99-tc3", "lang-cpp-98", "lang-java-11"]
lang-c99-tc3 = ["tree-sitter-c"]
lang-cpp-98 = ["tree-sitter-cpp"]
lang-java-11 = ["tree-sitter-java"]

[dependencies]
base64 = "0.21.2"
derivative = "2.2.0"
derive_more = "0.99.17"
fallible-iterator = { version = "0.3.0", features = ["std"] }
flagset = "0.4.3"
getset = "0.1.2"
itertools = "0.11.0"
lazy-regex = { version = "3.0.2", features = ["std"] }
once_cell = "1.18.0"
regex = "1.9.4"
sha2 = "0.10.7"
strum = { version = "0.25.0", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.47"
tracing = "0.1.37"
tree-sitter = "0.20.10"
tree-sitter-c = { version = "0.20.6", optional = true }
tree-sitter-cpp = { version = "0.20.3", optional = true }
tree-sitter-java = { version = "0.20.2", optional = true }
tree-sitter-traversal = "0.1.2"
typed-builder = "0.15.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
snippets = { path = ".", features = ["lang-all"] }
criterion = "0.5.1"
pretty_assertions = "1.4.0"

[[bench]]
name = "hashes"
harness = false
